# newsbotninja3

./: .env.example  .gitignore  .replit  Procfile  package.json  pyproject.toml
.agents/: agent_assets_metadata.toml
artifacts/api-server/src/: app.ts
newsbotninja/: app.py  bot.py  newsbotninja_demo.html  requirements.txt  users.db  vapid_keys.json
newsbotninja/static/: style.css  sw.js
newsbotninja/templates/: admin.html  base.html  index.html  login.html  register.html
newsbotninja_demo/: admin.html  business.html  entertainment.html  health.html  index.html  kenya.html  login.html  register.html  science.html  sports.html  style.css  technology.html  world.html
