[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.3",
    "flask-login",
    "flask-mail",
    "gtts==2.5.3",
    "gunicorn",
    "pillow==10.4.0",
    "python-telegram-bot==21.6",
    "requests==2.32.3",
    "werkzeug",
]
